<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.relativelayoutmaterial.MainActivity">


    <ImageView
        android:id="@+id/imgCity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/malaga"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/imgFavorites"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_off"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/edtDateVisit"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40dp" />

    <TextView
        android:id="@+id/txtMonument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMonument"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/edtDateVisit"
        android:layout_marginStart="50dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="6dp"
        app:layout_constraintLeft_toLeftOf="@+id/imgCity" />

    <TextView
        android:id="@+id/txtDateVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDateVisit"
        android:layout_marginStart="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtDateVisit"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMonument" />

    <EditText
        android:id="@+id/edtDateVisit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text=""
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/edtTypeVisit"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintRight_toRightOf="@+id/imgCity"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtDateVisit" />

    <TextView
        android:id="@+id/txtTypeVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTypeVisit"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtTypeVisit"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtDateVisit" />

    <EditText
        android:id="@+id/edtTypeVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text=""
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/edtDateVisit"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="171dp"
        app:layout_constraintLeft_toLeftOf="@+id/edtDateVisit" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBuy"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toRightOf="@+id/btnReserved" />

    <Button
        android:id="@+id/btnReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReserved"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="121dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBuy"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMonument" />


</android.support.constraint.ConstraintLayout>
